--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=${PORT:8080}
 spring.application.name=PP
+
+spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:56029/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=xlnvnabZozdDfBDkvGmZSsmBOiQBNuAR
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+tour.api.base-url:https://apis.data.go.kr/B551011/KorService2
+tour.api.service-key:rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
+
+tago.api.basse-url:
+tago.api.service-key:rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
+
+http.client.connect-timeout=5000
+http.client.reposnse-timeout=5000
