--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,19 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-tour.api.base-url:https://apis.data.go.kr/B551011/KorService2
-tour.api.service-key:rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
+tour.api.base-url=https://apis.data.go.kr/B551011/KorService2
+tago.busstop.base-url=https://apis.data.go.k
+tago.arrival.base-url=
+tago.route.base-url=
+tago.busloc.base-url=
+tago.subway.base-url=
+tago.train.base-url=
 
-tago.api.base-url:
-tago.api.service-key:rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
+tour.api.service-key = rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
 
-http.client.connect-timeout=5000
-http.client.reposnse-timeout=5000
+
+tago.api.service-key=rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetRc3KXKV1E3kCaj5I6xEkKdJuqf09MJ0nWA%3D%3D
+
+seoulmetro.api.base-url=http://openapi.seoul.go.kr:8088/
+seoulmetro.api.key=726a7271427274613130356952534a4e
+
