--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ tago.api.service-key=rUA%2FIQ7GuIQ3GK8uD%2F9BxWRIuMpc6g5%2B5ou8WDjh7UqRTnnG0cetR
 seoulmetro.api.base-url=http://openapi.seoul.go.kr:8088/
 seoulmetro.api.key=726a7271427274613130356952534a4e
 
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
