--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.datasource.username=root
 spring.datasource.password=xlnvnabZozdDfBDkvGmZSsmBOiQBNuAR
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 tour.api.base-url=https://apis.data.go.kr/B551011/KorService2
-tago.busstop.base-url=https://apis.data.go.k
+tago.busstop.base-url=https://apis.data.go.kr
 tago.arrival.base-url=
 tago.route.base-url=
 tago.busloc.base-url=
@@ -28,3 +28,8 @@ seoulmetro.api.key=726a7271427274613130356952534a4e
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+
+logging.level.reactor.netty.http.client=DEBUG
+logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
