--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,5 @@ logging.level.reactor.netty.http.client=DEBUG
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.orm.jdbc.extract=trace
 spring.mvc.async.request-timeout=500000
