데이터 베이스 변경
사용자랑 서버 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=${PORT:8080}
+server.port=${PORT:8081}
 spring.application.name=PP
 
-spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:56029/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=xlnvnabZozdDfBDkvGmZSsmBOiQBNuAR
+spring.datasource.url=jdbc:mysql://pp-domain.duckdns.org/ppdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=your_user
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
