--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:8081}
+server.port=8082
 spring.application.name=PP
 
 spring.datasource.url=jdbc:mysql://pp-domain.duckdns.org/ppdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
