--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,22 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.profiles.include=oauth
+
+## Kakao - 주석 처리됨
+#spring.security.oauth2.client.registration.kakao.client-id=
+#spring.security.oauth2.client.registration.kakao.client-secret=
+#spring.security.oauth2.client.registration.kakao.client-name=Kakao
+#spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+#spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image,account_email
+#spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+#spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+#spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+#spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
