요청들 수정 파이썬 서버랑 연결되면 되는지 확인

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,6 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 logging.level.org.hibernate.orm.jdbc.extract=trace
 spring.mvc.async.request-timeout=500000
+
+# Congestion Prediction Server
+congestion.api.base-url=http://127.0.0.1:5001
