--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,7 @@ spring.mvc.async.request-timeout=500000
 
 # Congestion Prediction Server
 congestion.api.base-url=http://127.0.0.1:5000
+
+# Session Timeout Configuration
+# Sets the session to expire after 30 minutes of inactivity.
+server.reactive.session.timeout=30m
