경로 혼잡도

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,10 @@ spring.mvc.async.request-timeout=500000
 # Congestion Prediction Server
 congestion.api.base-url=http://127.0.0.1:5000
 
+# Tmap API
+tmap.api.base-url=https://apis.openapi.sk.com
+tmap.api.key=IVTcoE1T0k2JElq9X6xy9agnFOxGAApq1ZpwaY3j
+
 # Session Timeout Configuration
 # Sets the session to expire after 30 minutes of inactivity.
 server.reactive.session.timeout=30m
