--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,12 @@ configurations {
     }
 }
 
-repositories {
-    mavenCentral()
-}
+
 
 dependencies {
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // 메트릭 엔드포인트[web:91]
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -36,15 +37,25 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
     testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' // JUnit5 포함 [web:101]
+    testImplementation 'io.projectreactor:reactor-test'                   // StepVerifier [web:108]
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    implementation 'io.github.resilience4j:resilience4j-core:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+
+    implementation 'org.json:json:20240303'
+
 }
 
 bootJar { archiveFileName.set("app.jar") }
