--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,36 @@ tmap.api.key=IVTcoE1T0k2JElq9X6xy9agnFOxGAApq1ZpwaY3j
 # Session Timeout Configuration
 # Sets the session to expire after 30 minutes of inactivity.
 server.reactive.session.timeout=30m
+
+# HTTP client & timeouts
+webclient.timeout.connect-millis=3000
+webclient.timeout.read-millis=5000
+
+# Kakao Local API
+kakao.base-url=https://dapi.kakao.com
+kakao.api-key=${KAKAO_API_KEY}
+
+# Naver Search API
+naver.base-url=https://openapi.naver.com
+naver.client-id=${NAVER_CLIENT_ID}
+naver.client-secret=${NAVER_CLIENT_SECRET}
+
+# AI (?: Gemini/OpenAI ? Spring AI? ??)
+ai.model=gemini-1.5-pro
+GEMINI_API_KEY=AIzaSyCwqFuqZ2cuV9gaAAKq2_fmgCB-UyjyqkY
+
+# Resilience4j rate limits (?? ?? ??)
+resilience4j.ratelimiter.instances.kakaoLimiter.limitForPeriod=8
+resilience4j.ratelimiter.instances.kakaoLimiter.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.kakaoLimiter.timeoutDuration=0
+
+resilience4j.ratelimiter.instances.naverLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.naverLimiter.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.naverLimiter.timeoutDuration=0
+
+# Retry (?? API ?? ???)
+resilience4j.retry.instances.externalRetry.maxAttempts=2
+resilience4j.retry.instances.externalRetry.waitDuration=300ms
+
+
+gemini.api-key=AIzaSyCwqFuqZ2cuV9gaAAKq2_fmgCB-UyjyqkY
