--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,7 +71,7 @@ webclient.timeout.read-millis=5000
 
 # Kakao Local API
 kakao.base-url=https://dapi.kakao.com
-kakao.api-key=${KAKAO_API_KEY}
+kakao.api-key=c89452a4df777f22b298c13e30421435
 
 # Naver Search API
 naver.base-url=https://openapi.naver.com
