--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,8 +75,8 @@ kakao.api-key=c89452a4df777f22b298c13e30421435
 
 # Naver Search API
 naver.base-url=https://openapi.naver.com
-naver.client-id=${NAVER_CLIENT_ID}
-naver.client-secret=${NAVER_CLIENT_SECRET}
+naver.client-id=4dcu6Z4D0rXz43dydsz4
+naver.client-secret=3CTVI7X285
 
 # AI (?: Gemini/OpenAI ? Spring AI? ??)
 ai.model=gemini-1.5-pro
